Update overview.qmd for improved clarity and formatting

--- a/overview.qmd
+++ b/overview.qmd
@@ -3,7 +3,7 @@
 code-fold: true
 echo: false
 ---
-![](data/logo.jpg){width="10%"}
+![](logo.jpg){width="10%"}
 
 # Hospital Transparancy File Overview
 
